[gd_scene load_steps=15 format=3 uid="uid://cyy0bvywcu1kb"]

[ext_resource type="Script" uid="uid://d0lhhqg4utlkl" path="res://enemi.gd" id="1_2hell"]
[ext_resource type="Texture2D" uid="uid://cxyaiyvgogo71" path="res://slime_blue.png" id="2_b3g2x"]
[ext_resource type="PackedScene" uid="uid://3lurja6pr3hq" path="res://ingame_health_bar.tscn" id="3_4nd1q"]
[ext_resource type="AudioStream" uid="uid://b74njo56015lj" path="res://enemybouncesfx.mp3" id="4_ud76u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_klmqv"]
size = Vector2(41, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcwpq"]
atlas = ExtResource("2_b3g2x")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_imh0d"]
atlas = ExtResource("2_b3g2x")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_omhd2"]
atlas = ExtResource("2_b3g2x")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_58aih"]
atlas = ExtResource("2_b3g2x")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lah36"]
atlas = ExtResource("2_b3g2x")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7fl4"]
atlas = ExtResource("2_b3g2x")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqx5w"]
atlas = ExtResource("2_b3g2x")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vj31h"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_bcwpq")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_imh0d")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_omhd2")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_58aih")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_lah36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7fl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqx5w")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8gl0n"]
size = Vector2(43, 28)

[node name="CharacterBody2D" type="CharacterBody2D" groups=["enemy"]]
texture_filter = 1
position = Vector2(0, -3)
script = ExtResource("1_2hell")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 6)
shape = SubResource("RectangleShape2D_klmqv")
one_way_collision = true
one_way_collision_margin = 0.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 1)
scale = Vector2(2.1875, 2.1875)
sprite_frames = SubResource("SpriteFrames_vj31h")
autoplay = "default"
frame_progress = 0.448435

[node name="knockbackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 6)
shape = SubResource("RectangleShape2D_8gl0n")

[node name="ingameHealthBar" parent="." instance=ExtResource("3_4nd1q")]
offset_left = -14.0
offset_top = 24.0
offset_right = 14.0

[node name="enemyhitmildsfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ud76u")
volume_db = 15.407

[connection signal="timeout" from="knockbackTimer" to="." method="_on_knockback_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
